@@ -74,6 +74,7 @@
 <@if(!js_stop && file_size(file), #'<script async src="<@Basepath><@file>" id="theme-js"></script>\n')>
 	<title><@v.subtitle><@if(v.subtitle ne '',' - ')><@v.title></title>
 <@v.extra_header>
+<@if(!v.system_mode, s.html_header_txt)>
 </head>
 <body id="body" class="<@if(v.blog_admin, 'blog-owner')><@if(v.allow_edit, ' blog-editor')><@if(v.system_mode, ' system')><@if(v.sphone,' sp')>">
 <@>bodyにブラウザ別クラスを設定するためのスクリプト呼び出し
