@@ -12,7 +12,8 @@
   <@if(v.skel_name eq 'index',  '<span class="select">基本設定</span>', #'<a href="<@v.myself>?<@v.skel_dir>index<@addq>">基本設定</a>')>, 
   <@if(v.skel_name eq 'detail', '<span class="select">詳細設定</span>', #'<a href="<@v.myself>?<@v.skel_dir>detail<@addq>">詳細設定</a>')>, 
   <@if(v.skel_name eq 'role',   '<span class="select">権限設定</span>', #'<a href="<@v.myself>?<@v.skel_dir>role<@addq>">権限設定</a>')>, 
-  <@if(v.skel_name eq 'editor', '<span class="select">編集画面の設定</span>',  #'<a href="<@v.myself>?<@v.skel_dir>editor<@addq>">編集画面の設定</a>')>
+  <@if(v.skel_name eq 'editor', '<span class="select">編集画面の設定</span>',  #'<a href="<@v.myself>?<@v.skel_dir>editor<@addq>">編集画面の設定</a>')>,
+  <@if(v.skel_name eq 'header', '<span class="select">ヘッダの設定</span>',    #'<a href="<@v.myself>?<@v.skel_dir>header<@addq>">ヘッダの設定</a>')>
  <span class="item-end">]</span>
  </span>
 </nav>
